welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:15: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  faireFleur(c);
             ^FlowerPot:18: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  faireFleur(c);
             ^FlowerPot:25: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  faireFleur(c);
             ^FlowerPot:31: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  faireFleur(c);
             ^FlowerPot:34: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  faireFleur(c);
             ^